<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_text" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/privacy_statement" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_statement_text" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/permission_statement" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_statement_text" />
   </LinearLayout>