<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_version"
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/version" />

                <include layout="@layout/fragment_about" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_about_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                app:cardElevation="0dp"
                app:strokeColor="@color/black_secondary_foreground"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/rate"
                        android:textIsSelectable="false" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_text"
                        android:textIsSelectable="false" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_about_donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                app:cardElevation="0dp"
                app:strokeColor="@color/black_secondary_foreground"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/donate"
                        android:textIsSelectable="false" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donate_with_alipay"
                        android:textIsSelectable="false" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_about_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                app:cardElevation="0dp"
                app:strokeColor="@color/black_secondary_foreground"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/feedback"
                        android:textIsSelectable="false" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tasy5kg_email_address"
                        android:textIsSelectable="false" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_about_view_source_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                app:cardElevation="0dp"
                app:strokeColor="@color/black_secondary_foreground"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/view_source_code"
                        android:textIsSelectable="false" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cute_store_github_link"
                        android:textIsSelectable="false" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_about_view_dependencies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                app:cardElevation="0dp"
                app:strokeColor="@color/black_secondary_foreground"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/view_dependencies"
                        android:textIsSelectable="false" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_dependencies_text"
                        android:textIsSelectable="false" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                style="@style/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tasy5kg_name" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/release_date" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>