<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    tools:context=".ManageProductsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_mp_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            app:cardElevation="0dp"
            app:strokeColor="@color/black_secondary_foreground"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/export"
                    android:textIsSelectable="false" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_as_csv"
                    android:textIsSelectable="false" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_mp_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            app:cardElevation="0dp"
            app:strokeColor="@color/black_secondary_foreground"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/_import"
                    android:textIsSelectable="false" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_from_csv"
                    android:textIsSelectable="false" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_mp_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            app:cardElevation="0dp"
            app:strokeColor="@color/black_secondary_foreground"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/delete"
                    android:textIsSelectable="false" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_all_product_data"
                    android:textIsSelectable="false" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_mp_close"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/close" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>