<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/scanner_view"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:animateLayoutChanges="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:text="@string/barcode" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/mtv_barcode"
                            style="@style/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true"
                            android:textIsSelectable="true" />
                    </HorizontalScrollView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:animateLayoutChanges="true"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="3"
                        android:animateLayoutChanges="true"
                        android:hint="@string/product_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_product_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true"
                            android:singleLine="true"
                            android:textColorHighlight="?attr/colorPrimaryVariant" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:animateLayoutChanges="true"
                        android:hint="@string/price">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true"
                            android:inputType="numberDecimal"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_delete"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:animateLayoutChanges="true"
                        android:enabled="false"
                        android:text="@string/delete" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="3"
                        android:enabled="false"
                        android:text="@string/save" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>